--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ body{
     border: 4px solid rgba(0, 0, 0, .1);
     border-left-color: transparent;
     border-radius: 50%;
-    width: 36px;
-    height: 36px;
+    width: 5vh;
+    height: 5vh;
     animation: spin89345 1s linear infinite;
   }
   
@@ -113,6 +113,7 @@ body{
     align-items: center;
     justify-content: flex-start;
     flex-direction: column;
+    background-color: #fff9f9;
   
 }
 
@@ -162,22 +163,24 @@ body{
     min-width: 270px;
     width: 400px;
     height: 50px;
-    border-radius: 50px;
+    border-radius: 10px;
     border: 1px solid rgb(223, 223, 223);
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    background-color: rgba(252, 252, 252, 0.302);
+    background-color: rgb(255, 255, 255);
     gap: 15px;
     position: relative;
     transition: all .2s;
     margin-bottom: 30px;
+    transition: all .3s ease;
 }
 .socialbuttons img{
     position: absolute;
     left:7px;
     height: 36px;
+    border-radius: 5px;
 }
 .socialbuttons p{
     align-self: center;
@@ -188,7 +191,25 @@ body{
    
 }
 
+.socialbuttons:hover{
+    transform: scale(1.01);
+}
+.socialbuttons:hover p{
+    color: white;
+}
+.website:hover{
+    background-color: #11111b;
+}
+.amazon:hover{
+    background-color: #231f20;
 
+}
+.flipkart:hover{
+    background-color: #2772ef;
+}
+.youtube:hover{
+    background-color: #ff3435;
+}
 .youtube{
     margin-bottom: 0;
 }
@@ -236,15 +257,6 @@ body{
     html {
         font-size: 45%;  
     }
-    .loader {
-        width: 20rem;
-        height: 20rem;
-      }
-      .curve text {
-        font: 2em "Fira Sans", sans-serif;
-        ;
-      }
-      
     .mainContainer{
         padding-top: 30px;
         gap: 20px;
@@ -266,11 +278,6 @@ body{
         font-size: 2.1rem;
     }
     
-    .signatureSection img{
-        height: 37%;
-        filter: invert(1);
-    }
-
 }
 
 @media screen and (max-width:430px) {
